                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 26-07-2005 fixed: Possible crash when unloading dialogs from fullscreen video.
 - 26-07-2005 added: Support for syncing interlaced output through all zooming modes.  Only in the high quality renderer.
 - 26-07-2005 changed: Interlaced sync now cause somewhat less audio/video desync 
 - 26-07-2005 fixed: RSS crash due to code rearrangement.
 - 26-07-2005 fixed: nfo files are read during scan in My Videos.
 - 26-07-2005 fixed: IP input with 0's in blocks 2 or 3 was incorrect.
 - 26-07-2005 changed: Skin files are loaded on demand rather than on boot.
 - 26-07-2005 changed: Initial support for full GUI calibration.
 - 26-07-2005 updated: German language file
 - 26-07-2005 updated: Italian language file (Thnx to kotix)
 - 26-07-2005 updated: Chinese (Traditional) language file (Thnx to omenpica)
 - 26-07-2005 fixed: songs where submitted to audioscrobbler when seeking anolog to 50% or greater of a song
 - 26-07-2005 fixed: [ 1242799 ] Programs with ' in its name do not show up
 - 26-07-2005 added: base class for database classes
 - 26-07-2005 changed: database classes, RemoveIllegalChars is replaced by FormatSQL, use this to format sql statements, it will 
                       take care of chars sqlite doesn't like
 - 26-07-2005 fixed: Unable to delete movies from video database using context menu
 - 25-07-2005 added: file deletion from all three media window context menus, enable the "Allow File Deletion" option
			settings: video -> files, music -> files, pictures -> general
 - 25-07-2005 fixed: SF bug [ 1080749 ] Bidi font flipping doesn't work